tests/negative/gold/bad-literal2-test.gold
tests/negative/bad-literal2-test.toit:6:9: error: Invalid number literal
  print 0b2
        ^~~
tests/negative/bad-literal2-test.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed
